--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gsap": "^3.10.4",
     "node-sass": "^6.0.0",
     "react": "^18.1.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
