--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fullpage/react-fullpage": "^0.1.26",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@ramonak/react-progress-bar": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
