--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.9.3",
     "@fullpage/react-fullpage": "^0.1.26",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.7",
+    "@mui/material": "^5.9.1",
+    "@mui/styles": "^5.9.1",
     "@ramonak/react-progress-bar": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -19,6 +20,7 @@
     "react": "^18.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
