--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
