--- a/src/json/project.json
+++ b/src/json/project.json
@@ -5,7 +5,7 @@
         "isImage": true,
         "url": "https://ffxivctm.com",
         "gitUrl": "https://github.com/FREEZ2385/ffxiv-crafting-total-material",
-        "framework": ["React", "Redux", "AWS"],
+        "framework": ["React", "Redux", "AWS", "REST API"],
         "content": "よくプレイする「Final Fantasy XIV」って言うゲームの中でアイテム制作の便利のため直接開発したウェブアプリケーションです。「FFXIV」のデーターベースをAPIから取得してアイテム制作に必要な材料をまとめて並ぶようにしました。"
     }
 ]
